<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chrono Logger</string>
    
    <!-- Login text -->
    <string name="login_username_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Log in</string>
    <string name="login_forget_password">Forgot password?</string>
    <string name="login_signup">Sign up</string>
    
    <!-- Viewpager tab names -->
    <string name="tab_admin">Admin</string>
    <string name="tab_home">Current</string>
    <string name="tab_history">History</string>
    
    <!-- Tab headers -->
    <string name="admin_header_title">Admininstration</string>
    <string name="admin_header_body">Select devices to configure</string>
    <string name="home_header_title">Current location</string>
    <string name="history_header_title">Location history</string>
    <string name="history_header_body">You have been at these places in the past week</string>
    
    <!-- Settings -->
    <string name="menu_sign_out">Log out</string>
    
    <!-- Dialog message -->
    <string name="dialog_device_not_support">Unfortunately, your device does not support Bluetooth Low Energy.</string>
    
    <!-- Toast messages -->
    <string name="toast_forgot_password">A new password has been emailed to your account.</string>
    <string name="toast_ranging_failed">Not able to start looking for iBeacons. Please try again at a later time.</string>
    <string name="toast_bluetooth_not_enabled">Chrono Logger will not be able to actively log you without Bluetooth</string>
    
    <!-- Content descriptions -->
    <string name="res_logo">ChronoLogger logo</string>
    <string name="res_estimote_icon">Estimote icon</string>
    <string name="res_login_bg">Login background image</string>

</resources>
